# nlp

./: .gitignore  01_word_representation.ipynb  README.md  download_glove  pyproject.toml
src/nlp/: __init__.py
