[project]
name = "nlp"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Andy Weaver", email = "andrewayersweaver+github@gmail.com" }
]
dependencies = [
    "nltk>=3.8.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.0.0",
    "notebook>=7.2.1",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.1",
    "matplotlib>=3.9.1",
    "polars>=1.2.1",
    "duckdb>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.12"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.4",
    "ruff-lsp>=0.0.54",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nlp"]
